<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Journal</string>
    <string name="title_activity_main">My Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Journal</string>
    <string name="nav_header_subtitle">astridedjuikom@yahoo.fr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="share">Share</string>
    <string name="colors_and_fonts">Colors and Fonts</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="logout">Log out</string>
    <string name="revoke">Revoke</string>

    <string name="not_close_session"> can not be closed</string>
    <string name="not_revoke"> can not be revoked</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_an_entry">Add To The List </string>
    <string name="date_of_today">Date of today</string>
    <string name="entry_hour">hour</string>
    <string name="entry_title">title</string>
    <string name="entry_content">content</string>
    <string name="share_with">Share with</string>
    <string name="details">Details</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="save"> SAVE </string>
    <string name="cancel"> CANCEL </string>
    <string name="home">Home</string>


</resources>
