<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/entry_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date_of_today"
                android:inputType="date"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/entry_hour_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/entry_hour"
                android:inputType="time"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <EditText
                android:id="@+id/entry_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_title"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="text|textCapWords"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/entry_content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/entry_content"
                android:textSize="20sp"
                android:inputType="text|textMultiLine"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_add_to_entrylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorVertClair"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="30"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/add_an_entry"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

</LinearLayout>